sessions/handsOn/http-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: 2048-game
  name: apache-deployment
  labels:
    app: apache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apache
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
      - name: apache
        image: httpd
        ports:
        - containerPort: 80
