sessions/handsOn/web-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment1
  namespace: 2048-game
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:v2
        ports:
        - containerPort: 80
