sessions/handsOn/svc-apache.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache-deployment
  namespace: 2048-game
spec:
  selector:
    app: apache
  ports:
    - protocol: TCP
      port: 80            # Service port
      targetPort: 80       # Target port in the container
  type: NodePort      # Use `NodePort` or `LoadBalancer` for external access
