sessions/handsOn/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: 2048-game
  name: example-ingress1
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /nginx
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
      - path: /httpd
        pathType: Prefix
        backend:
          service:
            name: simple-nodeport
            port:
              number: 80
