sessions/handsOn/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: a
spec:
  podSelector:
    matchLabels:
      pod: a
  policyTypes:
  - Ingress
  ingress:
  - from:
    # - ipBlock:
    #     cidr: 172.17.0.0/16
    #     except:
    #     - 172.17.1.0/24
    - namespaceSelector:
        matchLabels:
          ns: b
      podSelector:
        matchLabels:
          run: pod-b
    # ports:
    # - protocol: TCP
    #   port: 6379
